[package]
name = "partiql-streams"
version = "0.1.1"
authors = ["Arash Maymandi <maymandi@amazon.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1.19.2", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.9"
warp = "0.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
uuid = { version = "1.3.1", features = ["serde", "v4"] }
timely = "0.12.0"
differential-dataflow = "0.12.0"
atomic-counter = "1.0.1"
rand = "0.8.5"

partiql-parser = { version = "0.3.*", features=["serde"] }
partiql-logical-planner = { version = "0.3.*"}
partiql-eval = { version = "0.3.*"}
partiql-value = { version = "0.3.*", features=["serde"] }
partiql-logical = { version = "0.3.*", features=["serde"] }